# Automatic_Driving-

./: README.md
docs/: First_Steps.adoc
docs/Entwicklerdokumentation/: Nachrichten.adoc  Parameter.adoc  Quickstart.adoc  Setup.adoc  Testen.adoc  Workspace.adoc
docs/Entwicklerdokumentation/images/: Komponentendiagramm.drawio
scripts/: calc_coverage.sh  run_tests.sh
src/psaf_controller/: CMakeLists.txt  package.xml
src/psaf_controller/config/: psaf_controller.yaml
src/psaf_controller/include/psaf_controller/: controller_node.hpp
src/psaf_controller/launch/: controller.launch.py
src/psaf_controller/measurements/: plotSpeedOverTime.py  showSpeedTable.py
src/psaf_controller/measurements/results/: speed_measurement100cmpersecond.html  speed_measurement200cmpersecond.html  speed_measurement50cmpersecond.html
src/psaf_controller/src/: controller.cpp  controller_node.cpp
src/psaf_controller/test/: unit_tests.cpp
src/psaf_lane_detection/: CMakeLists.txt  package.xml
src/psaf_lane_detection/config/: psaf_lane_detection.yaml
src/psaf_lane_detection/include/psaf_lane_detection/: lane_detection_node.hpp
src/psaf_lane_detection/launch/: lanedetection.launch.py
src/psaf_lane_detection/psaf_configuration/: CMakeLists.txt  package.xml
src/psaf_lane_detection/psaf_configuration/include/psaf_configuration/: configuration.hpp
src/psaf_lane_detection/psaf_configuration/src/: configuration.cpp
src/psaf_lane_detection/src/: lane_detection.cpp  lane_detection_node.cpp
src/psaf_lane_detection/test/: unit_tests.cpp
src/psaf_launch/: CMakeLists.txt  package.xml
src/psaf_launch/config/: d435i.yaml  d455.yaml  parameters_new.yml  parameters_old.yml  psaf_launch.yaml
src/psaf_launch/launch/: main_psaf1.launch.py  main_psaf1_no_signs.launch.py  main_psaf2.launch.py  realsense2_camera_435.launch.py  realsense2_camera_455.launch.py  ucbridge_new.launch.py  ucbridge_old.launch.py
src/psaf_shared/: CMakeLists.txt  package.xml
src/psaf_shared/include/psaf_shared/: image_saver.hpp  image_utils.hpp
src/psaf_shared/src/: image_saver.cpp  image_utils.cpp
src/psaf_shared/test/: unit_tests_image_saver.cpp  unit_tests_image_utils.cpp  unit_tests_main.cpp
src/psaf_sign_detection/: CMakeLists.txt  README.md  package.xml
src/psaf_sign_detection/config/: psaf_sign_detection.yaml
src/psaf_sign_detection/include/psaf_sign_detection/: helpers.hpp  sign_detection_node.hpp  sign_detector.hpp  sign_id.hpp
src/psaf_sign_detection/launch/: signdetection.launch.py
src/psaf_sign_detection/model/: classes.txt
src/psaf_sign_detection/src/: helpers.cpp  sign_detection.cpp  sign_detection_node.cpp  sign_detector.cpp  sign_id.cpp
src/psaf_sign_detection/test/: unit_test_helpers.cpp  unit_test_sign_detection_node.cpp  unit_test_sign_detector.cpp  unit_test_sign_id.cpp  unit_tests_main.cpp
src/psaf_startbox/: CMakeLists.txt  package.xml
src/psaf_startbox/config/: psaf_startbox.yaml
src/psaf_startbox/include/psaf_startbox/: startbox_node.hpp
src/psaf_startbox/launch/: startbox.launch.py
src/psaf_startbox/src/: startbox.cpp  startbox_node.cpp
src/psaf_startbox/test/: integration_tests.cpp  simulation_tests.cpp  unit_tests.cpp
src/psaf_startbox/test/include/: test_util.hpp
src/psaf_startbox/test/resources/bags/qr_code/: metadata.yaml
src/psaf_startbox/test/resources/bags/startbox_open_us/: metadata.yaml  startbox_open_us_0.db3
src/psaf_state_machine/: CMakeLists.txt  package.xml
src/psaf_state_machine/config/: psaf_state_machine.yaml
src/psaf_state_machine/include/psaf_state_machine/: state_definitions.hpp
src/psaf_state_machine/include/psaf_state_machine/basic_cup/: basic_cup_state_machine.hpp  basic_cup_state_machine_events.hpp  basic_cup_state_machine_node.hpp
src/psaf_state_machine/include/psaf_state_machine/basic_cup/states/: definition_start_state.hpp  driving.hpp  error.hpp  manual_driving.hpp  overtake.hpp  parking.hpp  shutdown.hpp  start_box.hpp
src/psaf_state_machine/include/tinyfsm/: tinyfsm.hpp
src/psaf_state_machine/launch/: statemachine.launch.py
src/psaf_state_machine/src/basic_cup/: basic_cup_state_machine.cpp  basic_cup_state_machine_main.cpp  basic_cup_state_machine_node.cpp
src/psaf_state_machine/src/basic_cup/states/: driving.cpp  error.cpp  manual_driving.cpp  overtake.cpp  parking.cpp  shutdown.cpp  start_box.cpp
src/psaf_state_machine/test/: integration_test.cpp  test_state_machine.cpp  test_state_machine_discipline_one.cpp  test_state_machine_discipline_two.cpp
src/psaf_state_machine/test/include/: integration_test.hpp  random_tests.hpp  test_util.hpp
src/psaf_trajectory/: CMakeLists.txt  package.xml
src/psaf_trajectory/config/: psaf_trajectory.yaml
src/psaf_trajectory/include/psaf_trajectory/: lane_kalman_filter.hpp  trajectory_node.hpp
src/psaf_trajectory/launch/: trajectory.launch.py
src/psaf_trajectory/scripts/: TrajectoryLogger.py  TrajectoryPlotter.py
src/psaf_trajectory/scripts/helpers/: Classes.py  Constants.py  Functions.py
src/psaf_trajectory/src/: lane_kalman_filter.cpp  trajectory.cpp  trajectory_node.cpp
src/psaf_trajectory/test/: unit_tests.cpp  unit_tests_lane_kalman_filter.cpp  unit_tests_trajectory_node.cpp
src/psaf_trajectory/test/include/: helper.hpp
src/psaf_trajectory/test/resources/: TestExpectedTrajectory1.lanes  TestExpectedTrajectory1.traj  TestExpectedTrajectory2.lanes  TestExpectedTrajectory2.traj  TestExpectedTrajectory3.lanes  TestExpectedTrajectory3.traj
src/psaf_utils/: package.xml  setup.cfg  setup.py
src/psaf_utils/psaf_utils/: psaf_sim_controller.py
src/psaf_utils/src/: utils.cpp
src/psaf_watchdog/: CMakeLists.txt  package.xml
src/psaf_watchdog/config/: psaf_watchdog.yaml
src/psaf_watchdog/include/psaf_watchdog/: watchdog_node.hpp
src/psaf_watchdog/launch/: watchdog.launch.py
src/psaf_watchdog/src/: watchdog.cpp  watchdog_node.cpp
src/psaf_watchdog/test/: unit_tests.cpp
